c1/think
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:1906:10: error: conflicting types for 'think'
move_s * think( move_s *retstr) 
         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/protos.h:63:8: note: previous declaration is here
move_s think (void);
       ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:1989:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = 0; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2046:18: error: expected expression
v30 = *( _OWORD *)&v47[v2].from; 
                 ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2046:10: error: use of undeclared identifier '_OWORD'
v30 = *( _OWORD *)&v47[v2].from; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2051:10: error: use of undeclared identifier 'off_419408'
puts( ( &off_419408)[phase]); 
         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2094:18: error: expected expression
v30 = *( _OWORD *)&pn_move.from; 
                 ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2094:10: error: use of undeclared identifier '_OWORD'
v30 = *( _OWORD *)&pn_move.from; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2124:12: error: expected expression
*( _OWORD *)( ( char *)&killer2[0].from + v13) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2124:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer2[0].from + v13) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2124:61: error: expected expression
*( _OWORD *)( ( char *)&killer2[0].from + v13) = *( _OWORD *)&dummy.from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2124:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer2[0].from + v13) = *( _OWORD *)&dummy.from; 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2125:12: error: expected expression
*( _OWORD *)( ( char *)&killer3[0].from + v13) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2125:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[0].from + v13) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2125:61: error: expected expression
*( _OWORD *)( ( char *)&killer3[0].from + v13) = *( _OWORD *)&dummy.from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2125:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[0].from + v13) = *( _OWORD *)&dummy.from; 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2127:12: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + v13) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2127:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + v13) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2127:58: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + v13) = *( _OWORD *)&dummy.from; 
                                                         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2127:50: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + v13) = *( _OWORD *)&dummy.from; 
                                                 ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2151:30: error: too many arguments to function call, expected 3, have 4
search_root( &v42, v17, v18, i_depth); 
~~~~~~~~~~~                  ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2169:39: error: too many arguments to function call, expected 3, have 4
search_root( &v42, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2179:39: error: too many arguments to function call, expected 3, have 4
search_root( &v42, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2206:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = i_depth; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2246:25: error: too many arguments to function call, expected single argument 'compmove', have 2 arguments
proofnumbercheck( &v45, compmove); 
~~~~~~~~~~~~~~~~        ^~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/protos.h:125:1: note: 'proofnumbercheck' declared here
move_s proofnumbercheck(move_s compmove);
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2296:14: error: passing 'char [8]' to parameter of incompatible type 'move_s'
comp_to_san( str, compmove); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2333:16: error: subscripted value is not an array, pointer, or vector
&& true_i_depth[0] >= 3 
   ~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2352:18: error: expected expression
v30 = *( _OWORD *)&compmove.from; 
                 ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2352:10: error: use of undeclared identifier '_OWORD'
v30 = *( _OWORD *)&compmove.from; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2397:18: error: expected expression
v30 = *( _OWORD *)&dummy.from; 
                 ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2397:10: error: use of undeclared identifier '_OWORD'
v30 = *( _OWORD *)&dummy.from; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2399:12: error: expected expression
*( _OWORD *)&v29->from = v30; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/search.c:2399:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v29->from = v30; 
   ^
32 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/think/src/obj/search.o] Error 1
